--- a/ecommerce.yml
+++ b/ecommerce.yml
@@ -1,11 +1,6 @@
-server:
-  port: 8761
+token:
+  expiration_time: 86400000
+  secret: user_token
 
-spring:
-  application:
-    name: discoveryservice
-
-eureka:
-  client:
-    register-with-eureka: false
-    fetch-registry: false
+gateway:
+  ip: 192.168.219.161
