--- a/user-service-dev.yml
+++ b/user-service-dev.yml
@@ -1,6 +1,6 @@
-token:
-  expiration_time: 86400000
-  secret: user_token
+#token:
+#  expiration_time: 86400000
+#  secret: user_token
 
 gateway:
   ip: 192.168.219.161
