--- a/application.yml
+++ b/application.yml
@@ -6,4 +6,4 @@ gateway:
   ip: 192.168.219.161
 
 order-service:
-  url: http://127.0.0.1:8000/order-service/%s/orders
+  url: http://ORDER-SERVICE/order-service/%s/orders
