--- a/application.yml
+++ b/application.yml
@@ -8,4 +8,4 @@ gateway:
 order-service:
   url: http://ORDER-SERVICE/order-service/%s/orders
   exception:
-    orders_is_empty: order is empty
+    orders_is_empty: order is empty2
